Changing the colour of the button

--- a/front/src/app/pages/user/start/start.component.html
+++ b/front/src/app/pages/user/start/start.component.html
@@ -61,7 +61,7 @@
         </mat-card>
 
         <div class="container text-center mt20 mb20">
-            <button (click)="submitSurvey()" mat-raised-button color="primary">Submit Quiz</button>
+            <button (click)="submitSurvey()" mat-raised-button class="custom-button">Submit Quiz</button>
         </div>
            </div>
            <div class="col-md-2">
