--- a/front/src/app/pages/signup/signup.component.html
+++ b/front/src/app/pages/signup/signup.component.html
@@ -3,14 +3,12 @@
         <div class="row" style="margin-top: 20px;">
             <div class="col-md-6 offset-md-3"> 
                 <mat-card>
-                  <mat-card-content>
+                <mat-card-content>
                 <div class="container text-center">
                     <img src="../../../assets/logo.png" alt="" width="100" height="100">
                 </div>
 
                 <h1 class="text-center">Register Here!</h1>
-
-                <!-- {{user | json}} -->
                 
                 <form (ngSubmit)="formSubmit()">
                     <!-- Username field -->
@@ -69,7 +67,7 @@
                         matInput placeholder="Enter here">
                       </mat-form-field>
 
-                      <!-- Phone Number -->
+                      <!-- Phone Number
                     <mat-form-field class="full-width" appearance="outline">
                         <mat-label>Phone Number</mat-label>
                         <input
@@ -77,8 +75,24 @@
                         [(ngModel)] ="user.phone"
                         name="phone" 
                         type = "number" 
+                        minlength="10"
                         matInput placeholder="Enter here">
-                      </mat-form-field>
+                      </mat-form-field> -->
+
+
+                      <mat-form-field class="full-width" appearance="outline">
+                        <mat-label>Phone Number</mat-label>
+                        <input
+                            required
+                            [(ngModel)]="user.phone"
+                            name="phone"
+                            type="tel"
+                            pattern="[0-9]*" 
+                            minlength="10"
+                            matInput
+                            placeholder="Enter here"
+                        >
+                    </mat-form-field>
 
                       <div class="container text-center">
                         <button type="submit" mat-raised-button class="custom-button">Register</button>    
