--- a/front/src/app/pages/admin/view-survey-questions/view-survey-questions.component.css
+++ b/front/src/app/pages/admin/view-survey-questions/view-survey-questions.component.css
@@ -1,8 +1,8 @@
 .custom-button {
     background-color: #7E7467;
-    color: white; /* Set text color to ensure readability */
+    color: white; 
 }
 .delete-button {
     background-color:#C41A23;
-    color: white; /* Set text color to ensure readability */
+    color: white; 
 }
