--- a/front/src/app/pages/signup/signup.component.css
+++ b/front/src/app/pages/signup/signup.component.css
@@ -1,9 +1,8 @@
 .full-width{
-    width:100%
+    width:90%
 }
 
-.custom-button {
+.bootstrap-wrapper .custom-button {
     background-color: #7E7467;
-    color: white; /* Set text color to ensure readability */
-  }
-  
+    color: white;
+}
