--- a/front/src/app/pages/admin/add-question/add-question.component.css
+++ b/front/src/app/pages/admin/add-question/add-question.component.css
@@ -5,5 +5,5 @@
 }
 .custom-button {
     background-color: #7E7467;
-    color: white; /* Set text color to ensure readability */
+    color: white; 
   }
