--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,20 +1,35 @@
-<!-- <div class="bootstrap-wrapper">
-    <div class="container">
-        <div class="row mt20">
-           <div class="col-md-6 offset-md-3 text-center">
-            <h1>Welcome to QuizHub</h1>
-            <button mat-raised-button color="primary">Home Page</button>
-           </div> 
-        </div>
-    </div>
-</div> -->
-
 <div class="bootstrap-wrapper">
     <div class="container">
         <div class="row mt20">
             <div class="col-md-6 offset-md-3 text-center">
-                <h1>Welcome to QuizHub</h1>
-                <p class="description">Explore, Learn, and Test Your Knowledge</p>
+                        <h1 class="welcome-text">Welcome To QuizHub!</h1>
+                        <p class="description">Explore, Learn, And Test Your Knowledge</p>            
+            </div>
+
+            <div class="col-md-4 mt50">
+                <mat-card class="feature-card">
+                    <mat-card-content>
+                        <h2 class="feature-title">Interactive Quizzes</h2>
+                        <p class="feature-description">Engage in fun and educational quizzes to test your knowledge.</p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+
+            <div class="col-md-4 mt50">
+                <mat-card class="feature-card">
+                    <mat-card-content>
+                        <h2 class="feature-title">Diverse Topics</h2>
+                        <p class="feature-description">Explore a wide range of topics and expand your horizons.</p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+            <div class="col-md-4 mt50">
+                <mat-card class="feature-card">
+                    <mat-card-content>
+                        <h2 class="feature-title">Track Your Progress</h2>
+                        <p class="feature-description">Monitor your quiz scores and see your learning progress over time.</p>
+                    </mat-card-content>
+                </mat-card>
             </div>
         </div>
     </div>
