--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -63,4 +63,8 @@ body { margin: 0; font-family:'Work Sans', Helvetica, Arial, sans-serif;font-wei
     width: 50px;;
 }
 
+.mt40{
+    margin-top: 40px  !important; 
+}
+
 
